objects/DMAPP__DM_Insight_Map_Node_Competitor__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing parts of the Insight Maps associated with Opportunities</description>
    <fields>
        <fullName>DMAPP__DM_Insight_Map_Node__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>DM Insight Map Node</label>
        <referenceTo>DMAPP__DM_Collaboration_Map_Node__c</referenceTo>
        <relationshipName>DM_Insight_Map_Node_Competitors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Insight_Map__c</fullName>
        <label>DM Insight Map</label>
        <referenceTo>DMAPP__DM_Collaboration_Map__c</referenceTo>
        <relationshipName>DM_Insight_Map_Node_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Competitor_Extra__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>DM Opportunity Competitor Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Competitor_Extra__c</referenceTo>
        <relationshipName>DM_Insight_Map_Node_Competitors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Our_Position__c</fullName>
        <label>Our Position</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Insight Map Node Competitor</label>
    <nameField>
        <label>DM Insight Map Node Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Insight Map Node Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>